[workspace]

members = [
    "lua-dom",
    "lua-pool",
    "lua-shell",
    "lua-fs",
    "lua-json",
    "lua-util",
    "lua-core",
    "lua-http",
    "lua-date",
    "lua-config",
    "lua-cli",
    "lua-crypto",
    "lua-hbs",
    "lua-env",
]


[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
