[workspace]

members = [
    "lua-dom",
    "lua-pool",
    "lua-shell",
    "lua-fs",
    "lua-json",
    "lua-util",
    "lua-core",
    "lua-http",
    "lua-date",
    "lua-config",
    "lua-cli",
    "lua-crypto",
    "lua-hbs",
    "lua-regexp",
    "lua-env",

    "blua-base",
    "blua-shared",
    "blua-os",
]

resolver = "2"

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
