[package]
name = "blua-base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["regexp", "crypto"]
regexp = ["regex"]
crypto = ["ring", "md5", "blua-shared/bytes"]

[dependencies]
mlua = { version = "0.9" }
chrono = { version = "0.4" }
regex = { version = "1", optional = true }
blua-shared = { path = "../blua-shared" }

ring = { version = "0.17", optional = true }
md5 = { version = "0.7", optional = true }

serde_json = { version = "1" }
