[package]
name = "blua-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["luajit52"]
lua54 = ["mlua/lua54"]
lua53 = ["mlua/lua53"]
luajit52 = ["mlua/luajit52"]

[dependencies]
mlua = { version = "0.9", features = ["async", "vendored"] }
blua-shared = { path = "../blua-shared" }
blua = { path = "../blua", features = ["full"] }

tokio = { version = "1", features = ["fs", "macros", "rt"] }
clap = { version = "4", features = [] }
