[package]
name = "blua-gerning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["async"]
async = ["lua-worker/async", "gerning/async"]

[dependencies]
lua-worker = { path = "../lua-worker" }
mlua = { version = "0.9", features = ["lua54"] }
gerning = { git = "https://github.com/kildevaeld/gerning-rs", features = [
    "std",
    "service",
] }
