[package]
name = "blua-hbs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlua = { version = "0.9", features = ["serialize"] }
handlebars = { version = "4" }
serde_json = "1"
blua-shared = { path = "../blua-shared" }
