[package]
name = "blua-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlua = { version = "0.9", features = ["async", "serialize"] }
reqwest = { version = "0.11" }
bytes = { version = "1" }
hyper = { version = "0.14" }
serde_json = { version = "1" }
encoding_rs = "0.8"
mime = "0.3"

blua-shared = { path = "../blua-shared" }
