[package]
name = "blua-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["bytes", "stream"]
bytes = ["data-encoding"]
stream = ["futures-lite", "async-trait", "locket"]
send = []

[dependencies]
mlua = { version = "0.9", features = ["async"] }
bytes = { version = "1" }
data-encoding = { version = "2", optional = true }
async-trait = { version = "0.1", optional = true }
futures-lite = { version = "2", optional = true }
locket = { git = "https://github.com/kildevaeld/locket-rs", features = [
    "async",
    "tokio",
    "std",
], optional = true }
