[package]
name = "blua-vfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
async = ["vfs/async", "mlua/async", "blua-shared/stream"]

[dependencies]
blua-shared = { path = "../blua-shared" }
vfs = { git = "https://github.com/kildevaeld/vfs-rs", branch = "v3", features = [
    "std",
] }
mlua = { version = "0.9", features = [] }
