[package]
name = "blua"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
lua54 = ["mlua/lua54"]
lua53 = ["mlua/lua53"]
lua52 = ["mlua/lua52"]
lua51 = ["mlua/lua51"]
luajit = ["mlua/luajit"]
luajit52 = ["luajit", "mlua/luajit52"]
luau = ["mlua/luau"]
luau-jit = ["luau", "mlua/luau-jit"]

full = ["os", "image", "hbs", "config", "http", "crypto", "regexp", "util"]

os = ["blua-os"]
image = ["blua-image"]
hbs = ["blua-hbs"]
config = ["blua-config"]
http = ["blua-http"]
crypto = ["blua-base/crypto"]
regexp = ["blua-base/regexp"]
util = ["blua-base/util"]

[dependencies]
mlua = { version = "0.9" }
blua-base = { path = "../blua-base" }
blua-os = { path = "../blua-os", optional = true }
blua-config = { path = "../blua-config", features = [
    "toml",
    "ron",
    "yaml",
], optional = true }
blua-hbs = { path = "../blua-hbs", optional = true }
blua-image = { path = "../blua-image", features = ["webp"], optional = true }
blua-http = { path = "../blua-http", optional = true }
blua-shared = { path = "../blua-shared" }
