[package]
name = "lua-fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
send = ["tokio/sync", "locket/tokio", "mlua/send"]

[dependencies]
mlua = { version = "0.8", features = ["async"] }
tokio = { version = "1", features = ["fs", "io-util"] }
locket = { git = "https://github.com/kildevaeld/locket-rs", features = [
    "async",
    "std",
] }
futures-lite = { version = "1" }
tokio-stream = { version = "0.1", features = ["io-util", "fs"] }

pin-project-lite = { version = "0.2" }

lua-util = { path = "../lua-util" }

[dev-dependencies]
mlua = { version = "0.8", features = ["async", "lua54"] }
tokio = { version = "1", features = ["fs", "macros", "rt", "io-util"] }
