[package]
name = "lua-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlua = { version = "0.8", features = [] }
async-trait = { version = "0.1" }
futures-lite = { version = "1" }
locket = { git = "https://github.com/kildevaeld/locket-rs", features = [
    "async",
    "std",
] }

bytes = { version = "1" }
data-encoding = { version = "2" }
