[package]
edition = "2021"
name = "lua-value"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
dom = ["lua-dom"]

[dependencies]
mlua = {version = "0.8"}
value = {git = "https://github.com/kildevaeld/value-rs"}

lua-dom = {path = "../lua-dom", optional = true}
