[package]
name = "lua-crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = { version = "0.16" }
mlua = { version = "0.9", features = ["async"] }
lua-util = { path = "../lua-util", features = ["types"] }
md5 = { version = "0.7" }
