[package]
name = "lua-shell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlua = { version = "0.9" }
tokio = { version = "1", features = ["process"] }
lua-util = { path = "../lua-util" }
lua-fs = { path = "../lua-fs" }
lua-env = { path = "../lua-env" }

[dev-dependencies]
mlua = { version = "0.9", features = ["async", "lua54"] }
tokio = { version = "1", features = [
    "fs",
    "macros",
    "process",
    "rt",
    "io-util",
] }
